Implemented simple YouTube (and other platforms) music player (unfinished)